add reset-password and signup
